--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,7 +333,13 @@ main {
 
 .avatar-box {
   background: var(--bg-gradient-onyx);
-  border-radius: 20px;
+  /* border-radius: 20px; */
+  border-radius: 50% 50% 50% 50%;
+}
+
+.avatar {
+  background: var(--bg-gradient-onyx);
+	border-radius: 20% 20% 20% 20%;
 }
 
 .info-content .name {
@@ -583,7 +589,7 @@ main {
   scroll-snap-align: center;
 }
 
-.testimonials-avatar-box {
+/* .testimonials-avatar-box {
   position: absolute;
   top: 0;
   left: 0;
@@ -591,7 +597,7 @@ main {
   background: var(--bg-gradient-onyx);
   border-radius: 14px;
   box-shadow: var(--shadow-1);
-}
+} */
 
 .testimonials-item-title { margin-bottom: 7px; }
 
@@ -695,13 +701,13 @@ main {
 
 .modal-close-btn ion-icon { --ionicon-stroke-width: 50px; }
 
-.modal-avatar-box {
+/* .modal-avatar-box {
   background: var(--bg-gradient-onyx);
   width: max-content;
   border-radius: 14px;
   margin-bottom: 15px;
   box-shadow: var(--shadow-2);
-}
+} */
 
 .modal-img-wrapper > img { display: none; }
 
@@ -1337,9 +1343,9 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar-info { gap: 25px; }
 
-  .avatar-box { border-radius: 30px; }
+  /* .avatar-box { border-radius: 30px; } */
 
-  .avatar-box img { width: 120px; }
+  /* .avatar-box img { width: 120px; } */
 
   .info-content .name { margin-bottom: 15px; }
 
@@ -1458,12 +1464,12 @@ textarea.form-input::-webkit-resizer { display: none; }
     align-items: center;
   }
 
-  .modal-avatar-box {
+  /* .modal-avatar-box {
     border-radius: 18px;
     margin-bottom: 0;
   }
 
-  .modal-avatar-box img { width: 65px; }
+  .modal-avatar-box img { width: 65px; } */
 
   .modal-img-wrapper > img {
     display: block;
@@ -1593,7 +1599,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     max-width: 680px;
   }
 
-  .modal-avatar-box img { width: 80px; }
+  /* .modal-avatar-box img { width: 80px; } */
 
 
 
@@ -1837,7 +1843,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .sidebar-info { flex-direction: column; }
 
-  .avatar-box img { width: 150px; }
+  /* .avatar-box img { width: 150px; } */
 
   .info-content .name {
     white-space: nowrap;
